--- a/class20_logisticRegression/class20_GLMlogistic.Rnw
+++ b/class20_logisticRegression/class20_GLMlogistic.Rnw
@@ -10,12 +10,12 @@
 
 %        The following variables are assumed by the standard preamble:
 %	Global variable containing module name:
-\title{Using splines in regression}
+\title{Generalized Linear Models and Logistic Regression}
 %	Global variable containing module shortname:
 %		(Currently unused, may be used in future.)
 \newcommand{\ModuleShortname}{MLR}
 %	Global variable containing author name:
-\author{Nicholas G Reich, Jeff Goldsmith}
+\author{Nicholas G Reich, OpenIntro }
 %	Global variable containing text of license terms:
 \newcommand{\LicenseText}{Made available under the Creative Commons Attribution-ShareAlike 3.0 Unported License: http://creativecommons.org/licenses/by-sa/3.0/deed.en\_US }
 %	Instructor: optional, can leave blank.
@@ -53,239 +53,144 @@ theme_set(theme_bw())
 
 \begin{frame}{Today's Lecture}
 
+
 \bi
-        \myitem Spline models
-	\myitem Penalized spline regression
+        \myitem Generalized linear models (GLMs)
+	\myitem Logistic regression
 \ei
 
-[More info: Harrel, {\em Regression Modeling Strategies}, Chapter 2, PDF handout]
+[Note: more on logistic regression can be found in the OpenIntro textbook, Chapter 8. These slides are based, in part, on the slides from OpenIntro.]
 
 \end{frame}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}[t]{Piecewise linear models}
+\begin{frame}
+\frametitle{Regression so far ...}
+    
+At this point we have covered:
 
-A piecewise linear model (also called a change point model or broken stick model) contains a few linear components
+{\small
+\begin{itemize}
+\item Simple linear regression
+\begin{itemize}
+\item Relationship between numerical response and a numerical or categorical predictor
+\end{itemize}
+\item Multiple regression
+\begin{itemize}
+\item Relationship between numerical response and multiple numerical and/or categorical predictors
+\item What to do when the relationships with the predictors are complex (nonlinear, skewed distribution, interactions, confounding, etc.)
+\end{itemize}
+\end{itemize}
+}
+
+
+What we haven't covered is what to do when the response is not continuous (i.e. categorical, count data, etc.)
+
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}
+\frametitle{Generalized linear models}
+
+$$\mathbb E[Y|x] = \beta_0+\beta_1 X_1 + \cdots + \beta_p X_p$$
+
+\begin{block}{Why not just use MLR when outcomes not continuous?}
 \bi
-        \myitem Outcome is linear over full domain, but with a different slope at different points
-	\myitem Points where relationship changes are referred to as ``change points" or ``knots"
-	\myitem Often there's one (or a few) potential change points
-\ei
-
-\end{frame}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Piecewise linear models}
-
-Suppose we want to estimate $\ev(y | x) = f(x)$ using a piecewise linear model.
-\bi
-	\myitem For one knot we can write this as
-	\beqa
-	\ev(y | x) = \beta_0 + \beta_1 x + \beta_2 (x - \kappa)_{+}
-	\eeqa
-	where $\kappa$ is the location of the change point and 
-        
-        $$ (x - \kappa)_{+} = $$
-\ei
-
-\end{frame}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Interpretation of regression coefficients}
-
-$$\ev(y | x) = \beta_0 + \beta_1 x + \beta_2 (x - \kappa)_{+}$$
-
-\bi
-
-\myitem $\beta_0 =$
-
-\vspace{2em}
-
-\myitem $\beta_1$ = 
-\vspace{2em}
-\myitem $\beta_2$ = 
-\vspace{2em}
-\myitem $\beta_1+\beta_2$ = 
-
-\ei
-
-
-\end{frame}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}[t]{Estimation}
-
-\bi
-	\myitem Piecewise linear models are low-dimensional (no need for penalization)
-	\myitem Parameters are estimated via OLS
-	\myitem The design matrix is ...
-\ei
-
-\end{frame}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Multiple knots}
-
-Suppose we want to estimate $\ev(y | x) = f(x)$ using a piecewise linear model.
-\bi
-	\myitem For multiple knots we can write this as
-	\beqa
-	\ev(y | x) = \beta_0 + \beta_1 x + \sum_{k = 1}^{K}\beta_{k+1} (x - \kappa_{k})_{+}
-	\eeqa
-	where $\{\kappa_{k}\}_{k = 1}^{K}$ are the locations of the change points
-	\myitem Note that knot locations are defined before estimating regression coefficients
-	\myitem Also, regression coefficients are interpreted conditional on the knots.
-\ei
-
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}[fragile]{Example: lidar data}
-
-<<datasetup, fig.height=3, message=FALSE>>=
-library(MASS)
-library(SemiPar)
-data(lidar)
-y = lidar$logratio
-range = lidar$range
-qplot(range, y)
-@
-
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}[fragile]{Example: lidar data}
-
-<<model1, fig.height=4, message=FALSE>>=
-knots <- c(550, 625)
-mkSpline <- function(k, x) (x - k > 0) * (x - k)
-X.des = cbind(1, range, sapply(knots, FUN=mkSpline, x=range))
-colnames(X.des) <- c("intercept", "range", "range1", "range2")
-lm.lin = lm(y ~ X.des - 1)
-plot(range, y, xlab = "Range", ylab = "log ratio", pch = 18)
-points(range, lm.lin$fitted.values, type = 'l', col = "red", lwd = 2)
-@
-
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}[fragile]{Example: lidar data}
-
-<<mode1Sum, fig.height=3, message=FALSE>>=
-summary(lm.lin)$coef
-@
-
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Piecewise quadratic and cubic models}
-
-Suppose we want to estimate $\ev(y | x) = f(x)$ using a piecewise quadratic model.
-\bi
-	\myitem For multiple knots we can write this as
-	\beqa
-	\ev(y | x) = \beta_0 + \beta_1 x + \beta_1 x^2 + \sum_{k = 1}^{K}\beta_{k+2} (x - \kappa_{k})^{2}_{+}
-	\eeqa
-	where $\{\kappa_{k}\}_{k = 1}^{K}$ are the locations of the change points
-	\myitem Similar extension for cubics
-	\myitem Piecewise quadratic models are smooth and have continuous first derivatives
-        \myitem Often, knots taken as quintiles of the data.
-\ei
-
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Advantages of piecewise models}
-
-Piecewise (linear, quadratic, etc) models have several advantages
-\bi
-        \myitem Easy construction of basis functions
-        \myitem Flexible, and don't rely on determining an appropriate form for $f(x)$ using standard functions
-	\myitem Allow for significance testing on change point slopes
-	\myitem Fairly direct interpretations
-\ei
-
-\end{frame}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{B-splines and natural splines}
-
-\begin{block}{Characteristics}
-\bi
-        \myitem Both B-splines and natural splines similarly define a basis over the domain of $x$
-        \myitem Can be constrained to have seasonal patterns
-        \myitem They are made up of piecewise polynomials of a given degree, and have defined derivatives similarly to the piecewise defined functions
-        \myitem Big advantage over linear splines: parameter estimation is often fairly robust to your choice of knots 
-        \myitem Big disadvantage over linear splines: harder to interpret specific coefficients
+        \myitem Linearity assumption may be more unreasonable than usual.
 \ei
 \end{block}
 
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{B-splines basis functions}
-
-        $$\ev(y | x) = \beta_0 + \sum_{j=1}^6 \beta_j B_j(x) $$
-
-<<bspl, echo=FALSE, fig.height=4.5, message=FALSE>>=
-require(splines)
-knots <- c(1,1.8,3:5,6.5,7,8.1,9.2,10)  # 10 => 10-4 = 6 Basis splines
-x <- seq(min(knots)-1, max(knots)+1, length.out = 501)
-bb <- splineDesign(knots, x = x, outer.ok = TRUE)
-
-plot(range(x), c(0,1), type = "n", xlab = "x", ylab = "",
-     main =  "B-splines - sum to 1 inside inner knots")
-mtext(expression(B[j](x) *"  and "* sum(B[j](x), j == 1, 6)), adj = 0)
-abline(v = knots, lty = 3, col = "light gray")
-abline(v = knots[c(4,length(knots)-3)], lty = 3, col = "gray10")
-lines(x, rowSums(bb), col = "gray", lwd = 2)
-matlines(x, bb, ylim = c(0,1), lty = 1)
-@
-
+\vspace{15em}
 
 \end{frame}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}[fragile]{Example: lidar data}
+\begin{frame}
+\frametitle{Generalized linear models}
 
-<<modelSpl, fig.height=4, message=FALSE>>=
-require(splines)
-lm.bs3 = lm(y ~ bs(range, df=3))
-plot(range, y, xlab = "Range", ylab = "log ratio", pch = 18)
-points(range, lm.bs3$fitted.values, type = 'l', col = "red", lwd = 2)
-@
+$$\mathbb E[Y|x] = \beta_0+\beta_1 X_1 + \cdots + \beta_p X_p$$
+\begin{block}{Why not just use MLR and least-squares when outcomes not continuous?}
+\bi
+        \myitem Equal variance assumption often violated ($Var[Y|x]=\sigma^2$).
+\ei
+
+\end{block}
+\vspace{15em}
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}
+\frametitle{Generalized linear models}
+
+$$\mathbb E[Y|x] = \beta_0+\beta_1 X_1 + \cdots + \beta_p X_p$$
+
+\begin{block}{Why not just use MLR and least-squares when outcomes not continuous?}
+\bi
+        \myitem Assumption of normal errors explicitly violated.
+\ei
+
+\end{block}
+\vspace{15em}
 
 \end{frame}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}[fragile]{Example: lidar data}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-<<modelSpl5, fig.height=4, message=FALSE>>=
-lm.bs5 = lm(y ~ bs(range, df=5))
-plot(range, y, xlab = "Range", ylab = "log ratio", pch = 18)
-points(range, lm.bs5$fitted.values, type = 'l', col = "red", lwd = 2)
-@
+\begin{frame}
+\frametitle{Generalized linear models: defined}
+
+All generalized linear models have the following three characteristics:
+\begin{enumerate}
+\item A probability distribution describing the outcome variable \\
+e.g. $Y \sim \text{Bernoulli}(p) \longrightarrow \mathbb E[Y|p] = p$. 
+\item A linear model
+\begin{itemize}
+\item $\eta = \beta_0+\beta_1 X_1 + \cdots + \beta_p X_p$
+\end{itemize}
+\item A link function that relates the linear model to the parameter of the outcome distribution
+\begin{itemize}
+\item $g(\mathbb E[Y]) = g(p) = \eta$ or $\mathbb E[Y] = p = g^{-1}(\eta)$
+\end{itemize}
+\end{enumerate}
 
 \end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}
+\frametitle{Odds}
+
+\vspace{-2mm}
+
+Odds are another way of quantifying the probability of an event, commonly used in gambling (and logistic regression).\\
+
+~\\
+
+{
+For some event $E$,
+{\small
+\[\text{odds}(E) = \frac{P(E)}{P(E^c)} = \frac{P(E)}{1-P(E)}\]
+}
+Similarly, if we are told the odds of E are $x$ to $y$ then
+{\small
+\[\text{odds}(E) = \frac{x}{y} = \frac{x/(x+y)}{y/(x+y)} \]
+}
+which implies
+{\small
+\[P(E) = x/(x+y),\quad P(E^c) = y/(x+y)\]
+}
+}
+
+\end{frame}
+
+
 
 
 
